<resources>
    <string name="app_name">Simulator</string>
    <string name="settings">Settings</string>
    <string name="New_guest">New Guest</string>
    <string name="elevator_system"> Elevator System Simulator</string>

    <string name="Simulation">Simulation</string>
    <string name="Start">Start</string>
    <string name="numOfFloor">Gdzie jedziesz</string>
    <string name="numWhereAreYou">Gdzie jesteś</string>
    <string name="start_value">0</string>

    <string name="start_value1">1</string>
    <string name="countElevator">Number of elevator in system</string>
    <string name="countOfFloor">Number of floor in building</string>
    <string name="TimeOfSim">Time of simulation</string>

    <string name="prev">Back</string>
    <string name="ok">OK</string>

    <string name="Target">Target</string>
    <string name="targetValue">0</string>
    <string name="PositionText">Position</string>
    <string name="PositionValue">0</string>

    <string name="alarm">Alarm</string>


</resources>